syntax = "proto3";

import "personalCenter/msg_login.proto"; // 登录
import "personalCenter/msg_regist.proto"; // 注册
import "personalCenter/msg_password.proto"; // 找回(获取)密码
import "personalCenter/msg_my_wallet.proto"; // 获取我的钱包详情
import "personalCenter/msg_common.proto"; // 获取验证码 上传文件
import "personalCenter/msg_upload_avatar.proto"; // 上传用户头像
import "personalCenter/msg_interest_word.proto"; // 上传用户头像
import "personalCenter/msg_personInfo.proto"; // 用户信息
import "personalCenter/msg_captcha.proto"; // 验证码

package personal;
option java_multiple_files = true;
option java_package = "com.wanfang.personal";
option objc_class_prefix = "WFPR";


service PersonalCenterService {

    // 检查用户名是否已经存在
    rpc CheckUserNameIsExist (CheckUserNameIsExistRequest) returns (CheckUserNameIsExistResponse);

    // 检查手机号是否已经存在
    rpc CheckPhoneIsExist (CheckPhoneIsExistRequest) returns (CheckPhoneIsExistResponse);

    // 获取交易历史
    rpc GetTradeList (UserGetTradeListRequest) returns (UserGetTradeListResponse);

    // 获取账户余额
    rpc GetBalance (UserGetBalenceRequest) returns (UserGetBalenceResponse);

    // 登录
    rpc Login (LoginRequest) returns (LoginResponse);

    // 登出
    rpc LoginOut (LoginOutRequest) returns (LoginOutResponse);

    // 快捷登录(手机号验证码登录)
    rpc quickLogin (QuickLoginRequest) returns (LoginResponse);

     // 第三方登录
    rpc thirdPartyLogin (ThirdPartyLoginRequest) returns (LoginResponse);

     // 第三方登录账号绑定
    rpc thirdPartyBind (ThirdPartyBindRequest) returns (ThirdPartyBindResponse);

    // 注册
    rpc Regist (RegistRequest) returns (RegistResponse);

    // 通过邮箱找回密码
//    rpc GetPasswordByEmail (PasswordByEmailRequest) returns (PasswordByEmailResponse);

    // 发送找回密码邮件
//    rpc SendPasswordEmail (PasswordEmailRequest) returns (PasswordEmailResponse);

    // 通过手机号找回密码
    rpc getPasswordByPhone (PasswordByPhoneRequest) returns (PasswordByPhoneResponse);

    // 验证密码是否正确
    rpc PasswordVerify (PasswordVerifyRequest) returns (PasswordVerifyResponse);

    // 更新密码
    rpc UpdatePassword (PasswordUpdateRequest) returns (PasswordUpdateResponse);

    // 获取我的钱包详情
    rpc GetMyWallet (MyWalletRequest) returns (MyWalletResponse);

    // 获取手机验证码
    rpc getPhoneCaptcha (GetPhoneCaptchaRequest) returns (GetPhoneCaptchaResponse);

    // 检验手机验证码(暂时不用)
    rpc checkPhoneCaptcha (CheckPhoneCaptchaRequest) returns (CheckPhoneCaptchaResponse);

    // 上传文件
    rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);

    // 上传用户头像
    rpc UploadAvatar (UploadAvatarRequest) returns (UploadAvatarResponse);

    // 根据关键字获取感兴趣列表
    rpc GetInterestSubject (InterestSubjectRequest) returns (InterestSubjectResponse);

    // 获取用户信息
    rpc GetUserInfo (MyInfoRequest) returns (MyInfoResponse);

    // 更新用户信息
    rpc UpdateUserInfo (MyInfoUpdateRequest) returns (MyInfoUpdateResponse);

    // 获取职称对照表
    rpc GetRolesList (UserRolesListRequest) returns (UserRolesListResponse);

    // 获取学历对照表
    rpc getEducationLevelList (EducationLevelListRequest) returns (EducationLevelListResponse);

    // 获取学科列表
    rpc getSubjectList (SubjectListRequest) returns (SubjectListResponse);


}













